// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation-accordion Basic renders as expected 1`] = `
<div>
  <div
    className="block-mm none"
  >
    <div
      className="pl24-mm px0 block-mm none pr12 bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        <div
          className="ml24 pt0"
        >
          <ul
            className="txt-m pb12 inline-block-mm none unprose"
          >
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-one"
              >
                Heading one
                
              </a>
              <ul
                className="none"
              />
            </li>
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-two"
              >
                Heading two
                
              </a>
              <ul
                className="none"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="pl24-mm px0 block-mm none pr12"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py24"
  >
    <div
      className="relative "
    >
      <div
        className="select-container "
      >
        <select
          aria-required={true}
          className="select select--stroke round-full bg-white"
          data-test="navigate-this-section-select"
          disabled={false}
          id="navigate-this-section"
          onChange={[Function]}
          value="page-one"
        >
          <option
            value="page-one"
          >
            Title one
          </option>
          <option
            value="page-two"
          >
            Title two
          </option>
        </select>
        <div
          className="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`navigation-accordion No second level items renders as expected 1`] = `
<div>
  <div
    className="block-mm none"
  >
    <div
      className="pl24-mm px0 block-mm none pr12 bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        
      </div>
    </div>
    <div
      className="pl24-mm px0 block-mm none pr12"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py24"
  >
    <div
      className="relative "
    >
      <div
        className="select-container "
      >
        <select
          aria-required={true}
          className="select select--stroke round-full bg-white"
          data-test="navigate-this-section-select"
          disabled={false}
          id="navigate-this-section"
          onChange={[Function]}
          value="page-one"
        >
          <option
            value="page-one"
          >
            Title one
          </option>
          <option
            value="page-two"
          >
            Title two
          </option>
        </select>
        <div
          className="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`navigation-accordion Shows third level items renders as expected 1`] = `
<div>
  <div
    className="block-mm none"
  >
    <div
      className="pl24-mm px0 block-mm none pr12 bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        <div
          className="ml24 pt0"
        >
          <ul
            className="txt-m pb12 inline-block-mm none unprose"
          >
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-one"
              >
                Heading one
                
              </a>
              <ul
                className="pl12 color-darken75"
              >
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover txt-bold"
                    href="#"
                  >
                    Subheading one
                    
                  </a>
                </li>
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover"
                    href="#subheading-two"
                  >
                    Subheading two
                    
                  </a>
                </li>
              </ul>
            </li>
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-two"
              >
                Heading two
                
              </a>
              <ul
                className="none"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="pl24-mm px0 block-mm none pr12"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py24"
  >
    <div
      className="relative "
    >
      <div
        className="select-container "
      >
        <select
          aria-required={true}
          className="select select--stroke round-full bg-white"
          data-test="navigate-this-section-select"
          disabled={false}
          id="navigate-this-section"
          onChange={[Function]}
          value="page-one"
        >
          <option
            value="page-one"
          >
            Title one
          </option>
          <option
            value="page-two"
          >
            Title two
          </option>
        </select>
        <div
          className="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`navigation-accordion Titles with tags renders as expected 1`] = `
<div>
  <div
    className="block-mm none"
  >
    <div
      className="pl24-mm px0 block-mm none pr12 bg-lighten75"
    >
      <div
        className="py3 "
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-one"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child color-black"
          >
            Title one
            
          </div>
        </a>
        <div
          className="ml24 pt0"
        >
          <ul
            className="txt-m pb12 inline-block-mm none unprose"
          >
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-one"
              >
                Heading one
                
              </a>
              <ul
                className="pl12 color-darken75"
              >
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover txt-bold"
                    href="#"
                  >
                    Subheading one
                    <span
                      className="ml6"
                    >
                      <div
                        className="inline-block"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          aria-describedby="tooltip-1"
                          className="txt-s txt-bold round px6 py3 inline-block cursor-default bg-orange-faint color-orange-dark "
                        >
                          Beta
                        </div>
                        <div
                          className="hide-visually"
                          id="tooltip-1"
                          role="tooltip"
                        >
                          <div
                            className="txt-s wmax120"
                          >
                            This feature is in public beta and is subject to potential changes.
                          </div>
                        </div>
                      </div>
                    </span>
                  </a>
                </li>
                <li
                  className="mt6"
                >
                  <a
                    className="color-blue-on-hover"
                    href="#subheading-two"
                  >
                    Subheading two
                    
                  </a>
                </li>
              </ul>
            </li>
            <li
              className="mb6"
            >
              <a
                className="color-blue-on-hover"
                href="#heading-two"
              >
                Heading two
                <span
                  className="ml6"
                >
                  <div
                    className="inline-block"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                  >
                    <div
                      aria-describedby="tooltip-2"
                      className="txt-s txt-bold round px6 py3 inline-block cursor-default bg-orange-faint color-orange-dark "
                    >
                      Beta
                    </div>
                    <div
                      className="hide-visually"
                      id="tooltip-2"
                      role="tooltip"
                    >
                      <div
                        className="txt-s wmax120"
                      >
                        This feature is in public beta and is subject to potential changes.
                      </div>
                    </div>
                  </div>
                </span>
              </a>
              <ul
                className="none"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="pl24-mm px0 block-mm none pr12"
    >
      <div
        className="py3  border-t border--gray-light"
      >
        <a
          className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
          href="page-two"
        >
          <div
            className="pl12 py12 txt-bold txt-m flex-child"
          >
            Title two
            <span
              className="ml6"
            >
              <div
                className="inline-block"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  aria-describedby="tooltip-3"
                  className="txt-s txt-bold round px6 py3 inline-block cursor-default bg-orange-faint color-orange-dark "
                >
                  Beta
                </div>
                <div
                  className="hide-visually"
                  id="tooltip-3"
                  role="tooltip"
                >
                  <div
                    className="txt-s wmax120"
                  >
                    This feature is in public beta and is subject to potential changes.
                  </div>
                </div>
              </div>
            </span>
          </div>
          <div
            className="flex-child flex-child--no-shrink"
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-chevron-down"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </a>
        
      </div>
    </div>
  </div>
  <div
    className="none-mm block bg-gray-faint px24 py24"
  >
    <div
      className="relative "
    >
      <div
        className="select-container "
      >
        <select
          aria-required={true}
          className="select select--stroke round-full bg-white"
          data-test="navigate-this-section-select"
          disabled={false}
          id="navigate-this-section"
          onChange={[Function]}
          value="page-one"
        >
          <option
            value="page-one"
          >
            Title one
          </option>
          <option
            value="page-two"
          >
            Title two
          </option>
        </select>
        <div
          className="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</div>
`;
